@@ -1,0 +1,47 @@
+#!/bin/sh
+##
+## Copyright (c) 2010-2011 The SquirrelMail Project Team
+##
+## Licensed under the GNU GPL. For full terms see the file COPYING.
+##
+## This file is part of SquirrelMail IMAP Proxy.
+##
+##  Facility:
+##
+##      imapproxy.init
+##
+##  Abstract:
+##
+##      in.imapproxyd startup script
+##
+##  Authors:
+##
+##      Emmanuel Dreyfus <manu@netbsd.org>
+##
+##  Version:
+##
+##      $Id:$
+##
+##  Modification History:
+##
+##      $Log$
+##
+##
+# BSD-stype init file for squirrelmail-imap_proxy server daemon
+#
+
+# PROVIDE: imapproxy
+# REQUIRE: DAEMON
+# BEFORE:  LOGIN
+
+$_rc_subr_loaded . /etc/rc.subr
+
+name="imapproxy"
+rcvar=$name
+command="@PREFIX@/sbin/in.imapproxyd"
+required_files="@PKG_SYSCONFDIR@/imapproxy.conf"
+
+load_rc_config $name
+run_rc_command "$1"
+
+
